Fix montharchive font align

--- a/stylesheets/othree.css
+++ b/stylesheets/othree.css
@@ -480,6 +480,9 @@ footer a:last-of-type {
   margin-right: 1em;
 }
 /* monthArchive */
+#content .month-archive {
+  font-family: 'Droid Sans Mono', Monaco, monospace;
+}
 #content .month-archive ol {
   display: inline;
   margin: 0;
